--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "mvc_design",
   "version": "1.0.0",
-  "description": "",
+  "description": "devour some burgers",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +17,13 @@
   },
   "devDependencies": {
     "handlebars-helper-css": "^0.1.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/santokiya/hamburg.git"
+  },
+  "bugs": {
+    "url": "https://github.com/santokiya/hamburg/issues"
+  },
+  "homepage": "https://github.com/santokiya/hamburg#readme"
 }
